# tunnel-mcp

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  template.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  doc_issue.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml  template-check.yml
docs/: architecture.md  checks.md  template-guide.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/release/: README.md  mvp-checklist.md  phase-11-post-mvp.md
scripts/: check-brand.mjs  check-docs.mjs  check-docs.test.mjs  check-frontend-legacy-files.mjs  check-shell-boundary.mjs  check-template-deps.mjs  check-template-deps.test.mjs  check-template-helpers.mjs  check-template.mjs  check-template.test.mjs  generate-icons.mjs  release-smoke.mjs  sync-template-config.mjs  sync-template-config.test.mjs  verify-release-artifacts.mjs
src/: App.tsx  index.css  index.html  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: app.rs  approvals.rs  logs.rs  mcp.rs  mod.rs  permissions.rs  settings.rs  shell.rs  tunnel.rs  tunnel_process.rs  updater.rs  workspace.rs
src-tauri/src/product/: mod.rs  settings.rs  status.rs
src-tauri/src/product/approvals/: mod.rs  request.rs  store.rs  store_test.rs  write_guard.rs  write_guard_test.rs  write_log.rs
src-tauri/src/product/commands/: approval.rs
src-tauri/src/product/integrations/: app_open.rs  mod.rs
src-tauri/src/product/logs/: audit.rs  diagnostics.rs  event.rs  mod.rs  redact.rs  store.rs
src-tauri/src/product/mcp/: extra_tools.rs  mod.rs  protocol.rs  resources.rs  resources_test.rs  server.rs  tools.rs  tools_test.rs  write_tools.rs
src-tauri/src/product/permissions/: mod.rs  policy.rs  policy_test.rs  read_policy.rs  read_policy_test.rs  scope.rs  store.rs  store_test.rs
src-tauri/src/product/security/: local_token.rs  mod.rs  path_guard.rs  secret_store.rs
src-tauri/src/product/tunnel/: client_binary.rs  client_binary_test.rs  client_download.rs  client_download_test.rs  client_health.rs  client_process.rs  client_process_test.rs  mod.rs
src-tauri/src/product/updater/: app_update.rs  app_update_test.rs  mod.rs  tunnel_update.rs  tunnel_update_test.rs
src-tauri/src/product/workspace/: mod.rs  profile.rs  store.rs
src-tauri/src/shell/: app_info.rs  brand.rs  external_url.rs  logging.rs  mod.rs  panic_hook.rs  paths.rs  runtime_boundary.rs  settings_store.rs  tray.rs  updater.rs
src-tauri/tests/: brand_boundary_test.rs  dependency_boundary_test.rs  external_url_test.rs  runtime_boundary_test.rs  settings_store_test.rs  shell_boundary_test.rs  template_config_sync_test.rs
src/app/: ShellApp.test.tsx  ShellApp.tsx  routes.tsx
src/app/layout/: AppContent.tsx  AppLayout.tsx  AppTopBar.tsx
src/components/layout/: Page.tsx  Section.tsx
src/components/settings/: StartMinimizedSwitch.tsx  ThemeSelect.tsx
src/components/titlebar/: WindowControls.tsx  WindowDragBar.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  index.ts  input.tsx  label.tsx  (+3 more)
src/pages/: AboutPage.tsx  ApprovalsPage.tsx  AuditLogsPage.tsx  DashboardPage.tsx  McpServerPage.tsx  PermissionsPage.tsx  ResourcesPage.tsx  SettingsPage.tsx  TunnelPage.tsx
src/test/: setup.ts  shellRuntimeSurface.test.ts
tests/: release-smoke.test.ts
tests/workspace/: types.test.ts
(+35 files in other folders)
